Fixed: Font size of logo on mobile, fixed form wrap on desktop

--- a/style.css
+++ b/style.css
@@ -61,7 +61,7 @@ header {
 
 .logo {
   font-family: "Pangolin", cursive;
-  font-size: 72px;
+  font-size: 58px;
   color: #fff;
 }
 
@@ -164,6 +164,7 @@ footer p {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    flex-wrap: wrap;
   }
 
   form div {
